[refactor] Moved all c++ files to msub folder malz-lang (preparing for tests in subfolder tests)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,14 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(.)
 
 add_executable(malz_lang
-        main.cpp
-        chunk.cpp
-        debug.cpp
-        value.cpp
-        value.hpp
-        ir.cpp
-        ir.hpp
-        vm.cpp
-        vm.hpp)
+        malz-lang/main.cpp
+        malz-lang/chunk.cpp
+        malz-lang/debug.cpp
+        malz-lang/value.cpp
+        malz-lang/value.hpp
+        malz-lang/ir.cpp
+        malz-lang/ir.hpp
+        malz-lang/vm.cpp
+        malz-lang/vm.hpp
+        malz-lang/optimizer.cpp
+        malz-lang/optimizer.hpp)
