[tests] Added unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,8 +12,34 @@ add_executable(malz_lang
         malz-lang/value.cpp
         malz-lang/value.hpp
         malz-lang/ir.cpp
-        malz-lang/ir.hpp
         malz-lang/vm.cpp
-        malz-lang/vm.hpp
         malz-lang/optimizer.cpp
-        malz-lang/optimizer.hpp)
+)
+
+include(FetchContent)
+FetchContent_Declare(
+        googletest
+        URL https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip
+)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+add_executable(malz_test
+        tests/ir_test.cpp
+        malz-lang/chunk.cpp
+        malz-lang/debug.cpp
+        malz-lang/value.cpp
+        malz-lang/value.hpp
+        malz-lang/ir.cpp
+        malz-lang/vm.cpp
+        malz-lang/optimizer.cpp
+)
+target_link_libraries(
+        malz_test
+        GTest::gtest_main
+        GTest::gtest
+)
+
+include(GoogleTest)
+gtest_discover_tests(malz_test)
